--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- 独自のCSS -->
     <link rel="stylesheet" type="text/css" href="profile.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <div class = "header">
